fixed parallex image on mobile

--- a/01-homepage/css/responsive.css
+++ b/01-homepage/css/responsive.css
@@ -36,7 +36,7 @@
 	}
 	.main-slider{
 		background-image: url(../../images/edited2.png); 
-
+		background-attachment: initial;
 			/* background-position: 10% center; */
 	} 
 	/* ---------------------------------
@@ -50,7 +50,7 @@
 	h3{ font-size: 1.8em; }
 	h4{ font-size: 1.5em; }
 	h5{ font-size: 1.2em; }
-	
+
 	/* ---------------------------------
 	2. COMMONS FOR PAGE DESIGN
 	--------------------------------- */
